--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,4 +1,4 @@
-footer * {
+/* footer * {
   background-color: #383b46;
 }
 
@@ -88,4 +88,4 @@ footer {
   .contacts {
     gap: 20px;
   }
-}
+} */
