--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,91 +1,3 @@
-/* footer * {
+footer * {
   background-color: #383b46;
 }
-
-footer {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 30px 100px;
-  background-color: #383b46;
-}
-
-.logo_container {
-  margin-right: auto;
-  cursor: pointer;
-}
-
-.logo {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.logo_text {
-  display: inline-block;
-  vertical-align: middle;
-  font-weight: 500;
-}
-
-.footer_links li {
-  margin-right: 20px;
-}
-
-.contacts a {
-  transition: all 0.3s ease 0s;
-  width: 100px;
-}
-
-.contacts a:hover {
-  color: #fd2a36;
-}
-
-.footer a:hover {
-  color: #fd2a36;
-}
-
-.footer_links {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-}
-
-@media screen and (max-width: 1060px) {
-  .email_link {
-    font-size: smaller;
-    font-weight: 400;
-  }
-
-  footer {
-    padding: 30px 40px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  footer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: none;
-    gap: 20px;
-  }
-
-  footer .logo {
-    width: 50px;
-    display: flex;
-    vertical-align: none;
-    text-align: center;
-  }
-
-  footer .logo_container {
-    display: flex;
-    align-items: center;
-    margin-right: 0%;
-  }
-
-  .footer_links {
-    align-items: center;
-  }
-
-  .contacts {
-    gap: 20px;
-  }
-} */
